Import translations. DO NOT MERGE
Change-Id: I7531241854018cd052606f7f4a9b82fccd2e725c
Auto-generated-cl: translation import

--- a/java/res/values-be/strings.xml
+++ b/java/res/values-be/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Галасавы набор адкл."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Налада метадаў уводу"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Мовы ўводу"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Адправіць водгук"</string>
     <string name="select_language" msgid="3693815588777926848">"Мовы ўводу"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Дакраніцеся зноў, каб захаваць"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Слоўнік даступны"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Па змаўчанні"</string>
     <string name="language_settings" msgid="1671153053201809031">"Мова і ўвод"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Выберыце метад уводу"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Пастаўшчык слоўніка"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Пастаўшчык слоўніка"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Слоўнік"</string>
-    <string name="download_description" msgid="3274861514695032954">"Інфармацыя абнаўлення слоўніка"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Дадатковыя слоўнікі"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Даступны слоўнік"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Налады для слоўнікаў"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Карыстальніцкія слоўнікі"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Карыстальніцкі слоўнік"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Даступны слоўнік"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Спампоўваецца зараз"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Усталяваны"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Усталявана, адключана"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Праблема падключэння да слоўніка"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Слоўнікаў няма"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Абнавіць"</string>
-    <string name="last_update" msgid="3101549719827600346">"Апошняе абнаўленне"</string>
-    <string name="message_updating" msgid="820186276704134720">"Праверка наяўнасці абнаўленняў"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Загрузка..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Асноўны слоўнік"</string>
-    <string name="cancel" msgid="5586531736609183304">"Адмена"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Усталяваць"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Адмяніць спампаванне"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Адключыць"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Уключыць"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Выдаліць"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Слоўнік для мовы \"<xliff:g id="LANGUAGE">%1$s</xliff:g>\""</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Нацiснiце, каб прагледзець i спампаваць"</string>
+    <string name="app_name" msgid="6320102637491234792">"Пастаўшчык слоўніка"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Пастаўшчык слоўніка"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Слоўнік"</string>
+    <string name="download_description" msgid="6014835283119198591">"Інфармацыя абнаўлення слоўніка"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Дадатковыя слоўнікі"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Даступны слоўнік"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Налады для слоўнікаў"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Карыстальніцкія слоўнікі"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Карыстацкі слоўнік"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Даступны слоўнік"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Спампоўваецца зараз"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Усталявана"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Усталявана, адключана"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Праблема падключэння да слоўніка"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Слоўнікаў няма"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Абнавіць"</string>
+    <string name="last_update" msgid="730467549913588780">"Апошняе абнаўленне"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Праверка наяўнасці абнаўленняў"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Загрузка..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Асноўны слоўнік"</string>
+    <string name="cancel" msgid="6830980399865683324">"Адмяніць"</string>
+    <string name="install_dict" msgid="180852772562189365">"Усталяваць"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Адмена"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Выдаліць"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Для выбранай мовы на мабільнай прыладзе ёсць слоўнік.&lt;br/&gt; Мы рэкамендуем &lt;b&gt;спампаваць&lt;/b&gt; слоўнік для мовы \"<xliff:g id="LANGUAGE">%1$s</xliff:g>\" для паляпшэння зручнасці набору.&lt;br/&gt; &lt;br/&gt; Спампоўка можа заняць хвіліну або дзве ў 3G-сетках. Калі ў вас няма &lt;b&gt;безлімітнага тарыфнага плану перадачы дадзеных&lt;/b&gt;, могуць прымяняцца дадатковыя плацяжы&lt;br/&gt;. Калі вы не ведаеце дакладна, які ў вас тарыфны план, мы рэкамендуем знайсці падлучэнне да сеткі Wi-Fi, каб пачаць аўтаматычную спампоўку.&lt;br/&gt; &lt;br/&gt; Парада: можна спампоўваць і выдаляць слоўнікі, перайшоўшы ў раздзел &lt;b&gt;Мова і ўвод&lt;/b&gt; у меню &lt;b&gt;Налады&lt;/b&gt; вашай мабільнай прылады."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Спампаваць зараз (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>МБ)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Спампаваць праз Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Слоўнік для мовы \"<xliff:g id="LANGUAGE">%1$s</xliff:g>\""</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Нацiснiце, каб прагледзець i спампаваць"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Загрузка: прапановы для мовы \"<xliff:g id="LANGUAGE">%1$s</xliff:g>\" хутка з\'явяцца."</string>
 </resources>
