--- a/java/res/values-es/strings.xml
+++ b/java/res/values-es/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Entrada de voz inhabilitada"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Configurar métodos de entrada"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Idiomas"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Enviar comentarios"</string>
     <string name="select_language" msgid="3693815588777926848">"Idiomas de entrada"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Toca otra vez para guardar."</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Hay un diccionario disponible"</string>
@@ -170,36 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Predeterminado"</string>
     <string name="language_settings" msgid="1671153053201809031">"Idioma y entrada de texto"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Selecciona un método de entrada"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Proveedor del diccionario"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Proveedor del diccionario"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Servicio de diccionario"</string>
-    <string name="download_description" msgid="3274861514695032954">"Información de actualización del diccionario"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Diccionarios complementarios"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Diccionario disponible"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Ajustes de diccionarios"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Diccionarios del usuario"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Diccionario del usuario"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Hay un diccionario disponible"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Descargas en curso"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Instalado"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Instalado (inhabilitado)"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Error al conectar"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"No hay diccionarios"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Actualizar"</string>
-    <string name="last_update" msgid="3101549719827600346">"Última actualización"</string>
-    <string name="message_updating" msgid="820186276704134720">"Buscando actualizaciones"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Cargando..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Diccionario principal"</string>
-    <string name="cancel" msgid="5586531736609183304">"Cancelar"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Instalar"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Cancelar descarga"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Inhabilitar"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Habilitar"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Eliminar"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Hay un diccionario disponible para el idioma seleccionado en tu dispositivo móvil.&lt;br/&gt; Te recomendamos que &lt;b&gt;descargues&lt;/b&gt; el diccionario de <xliff:g id="LANGUAGE">%1$s</xliff:g> para mejorar tu experiencia de escritura.&lt;br/&gt; &lt;br/&gt; La descarga puede tardar unos minutos en redes 3G. Si no tienes un &lt;b&gt;plan de datos ilimitado&lt;/b&gt;, es posible que se apliquen cargos.&lt;br/&gt; Si no conoces las características de tu plan de datos, te recomendamos que uses una conexión Wi-Fi para iniciar la descarga automáticamente.&lt;br/&gt; &lt;br/&gt; Sugerencia: puedes descargar y eliminar diccionarios en la sección &lt;b&gt;Idioma e introducción de texto&lt;/b&gt; del menú &lt;b&gt;Ajustes&lt;/b&gt; del dispositivo móvil."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Descargar ahora (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Descargar mediante Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Hay un diccionario disponible de <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Pulsa para comprobar y descargar"</string>
+    <string name="app_name" msgid="6320102637491234792">"Proveedor del diccionario"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Proveedor del diccionario"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Servicio de diccionario"</string>
+    <string name="download_description" msgid="6014835283119198591">"Información de actualización del diccionario"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Diccionarios complementarios"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Diccionario disponible"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Ajustes de diccionarios"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Diccionarios del usuario"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Diccionario del usuario"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Diccionario disponible"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Descargando..."</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Instalado"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Instalado (inhabilitado)"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Error al conectar"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"No hay diccionarios"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Actualizar"</string>
+    <string name="last_update" msgid="730467549913588780">"Última actualización"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Buscando actualizaciones"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Cargando..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Diccionario principal"</string>
+    <string name="cancel" msgid="6830980399865683324">"Cancelar"</string>
+    <string name="install_dict" msgid="180852772562189365">"Instalar"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Cancelar"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Eliminar"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Hay un diccionario disponible para el idioma seleccionado en tu dispositivo móvil.&lt;br/&gt; Te recomendamos que &lt;b&gt;descargues&lt;/b&gt; el diccionario de <xliff:g id="LANGUAGE">%1$s</xliff:g> para mejorar tu experiencia de escritura.&lt;br/&gt; &lt;br/&gt; La descarga puede tardar unos minutos en redes 3G. Si no tienes un &lt;b&gt;plan de datos ilimitado&lt;/b&gt;, se pueden aplicar cargos.&lt;br/&gt; Si no conoces las características de tu plan de datos, te recomendamos que uses una conexión Wi-Fi para iniciar la descarga automáticamente.&lt;br/&gt; &lt;br/&gt; Sugerencia: puedes descargar y eliminar diccionarios en la sección &lt;b&gt;Idioma y entrada de texto&lt;/b&gt; del menú &lt;b&gt;Ajustes&lt;/b&gt; del dispositivo móvil."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Descargar ahora (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Descargar mediante Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Hay un diccionario disponible de <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Pulsa para comprobar y descargar"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Descargando: las sugerencias de <xliff:g id="LANGUAGE">%1$s</xliff:g> estarán disponibles en breve."</string>
 </resources>
