--- a/java/res/values-nb/strings.xml
+++ b/java/res/values-nb/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Taleinndata er deaktiv."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfigurer inndatametoder"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Inndataspråk"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Send tilbakemelding"</string>
     <string name="select_language" msgid="3693815588777926848">"Inndataspråk"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Trykk på nytt for å lagre"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Ordbok tilgjengelig"</string>
@@ -170,36 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Standard"</string>
     <string name="language_settings" msgid="1671153053201809031">"Språk og inndata"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Velg inndatametode"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Ordlisteleverandør"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Ordlisteleverandør"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Ordboktjeneste"</string>
-    <string name="download_description" msgid="3274861514695032954">"Oppdateringsinformasjon for ordliste"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Tilleggsordlister"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Ordliste er tilgjengelig"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Innstillinger for ordlister"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Brukerordlister"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Brukerordliste"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Ordliste er tilgjengelig"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Laster ned nå"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Installert"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Installert, deaktivert"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Kan ikke koble til ordlistetjenesten"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Fant ingen ordliste"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Last inn på nytt"</string>
-    <string name="last_update" msgid="3101549719827600346">"Sist oppdatert"</string>
-    <string name="message_updating" msgid="820186276704134720">"Ser etter oppdateringer"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Laster inn …"</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Hovedordliste"</string>
-    <string name="cancel" msgid="5586531736609183304">"Avbryt"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Installer"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Avbryt nedlastingen"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Deaktiver"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Aktiver"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Slett"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Det valgte språket på mobileneheten din har en tilgjengelig ordliste.&lt;br/&gt; Vi anbefaler å &lt;b&gt;laste ned&lt;/b&gt; ordlisten for <xliff:g id="LANGUAGE">%1$s</xliff:g>. Dette forbedrer skriveopplevelsen din.&lt;br/&gt; &lt;br/&gt; Nedlastingen kan ta fra ett til to minutter via 3G. Belastninger kan påløpe hvis du ikke har et abonnement med &lt;b&gt;ubegrenset databruk&lt;/b&gt;.&lt;br/&gt; Hvis du er usikker på hvilken abonnementstype du har, anbefaler vi deg å finne en Wi-Fi-tilkobling for å starte nedlastingen automatisk.&lt;br/&gt; &lt;br/&gt; Tips: Du kan laste ned og fjerne ordlister ved å gå til &lt;b&gt;Språk og inndata&lt;/b&gt; i menyen for &lt;b&gt;Innstillinger&lt;/b&gt; på mobilenheten din."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Last ned nå (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Last ned via Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"En ordliste er tilgjengelig for <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Trykk for å se gjennom og laste ned"</string>
+    <string name="app_name" msgid="6320102637491234792">"Ordlisteleverandør"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Ordlisteleverandør"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Ordlistetjeneste"</string>
+    <string name="download_description" msgid="6014835283119198591">"Oppdateringsinformasjon for ordliste"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Tilleggsordlister"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Ordliste tilgjengelig"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Innstillinger for ordlister"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Brukerordlister"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Brukerordbok"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Ordliste tilgjengelig"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Laster ned nå"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Installert"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Installert, deaktivert"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Kan ikke koble til ordlistetjenesten"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Fant ingen ordlister"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Last inn på nytt"</string>
+    <string name="last_update" msgid="730467549913588780">"Sist oppdatert"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Ser etter oppdateringer ..."</string>
+    <string name="message_loading" msgid="8689096636874758814">"Laster inn …"</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Hovedordliste"</string>
+    <string name="cancel" msgid="6830980399865683324">"Avbryt"</string>
+    <string name="install_dict" msgid="180852772562189365">"Installer"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Avbryt"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Slett"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Det valgte språket på mobilenheten din har en tilgjengelig ordliste.&lt;br/&gt; Vi anbefaler å &lt;b&gt;laste ned&lt;/b&gt; ordlisten for <xliff:g id="LANGUAGE">%1$s</xliff:g>. Dette forbedrer skriveopplevelsen din.&lt;br/&gt; &lt;br/&gt; Nedlastingen kan ta fra ett til to minutter via 3G. Belastninger kan påløpe hvis du ikke har et abonnement med &lt;b&gt;ubegrenset databruk&lt;/b&gt;.&lt;br/&gt; Hvis du er usikker på hvilken abonnementstype du har, anbefaler vi deg å finne en Wi-Fi-tilkobling for å starte nedlastingen automatisk.&lt;br/&gt; &lt;br/&gt; Tips: Du kan laste ned og fjerne ordlister ved å gå til &lt;b&gt;Språk og inndata&lt;/b&gt; i menyen for &lt;b&gt;Innstillinger&lt;/b&gt; på mobilenheten din."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Last ned nå (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Last ned via Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"En ordliste er tilgjengelig for <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Trykk for å se gjennom og laste ned"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Laster ned: forslag blir snart tilgjengelige for <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
