--- a/java/res/values-sk/strings.xml
+++ b/java/res/values-sk/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Hlasový vstup je zakázaný"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfigurovať metódy vstupu"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Jazyky vstupu"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Odoslať spätnú väzbu"</string>
     <string name="select_language" msgid="3693815588777926848">"Jazyky vstupu"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Opätovným dotykom uložíte"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"K dispozícii je slovník"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Predvolené"</string>
     <string name="language_settings" msgid="1671153053201809031">"Jazyk &amp; vstup"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Zvoliť metódu vstupu"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Poskytovateľ slovníka"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Poskytovateľ slovníka"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Služba slovníka"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informácie aktualizácie slovníka"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Doplnkové slovníky"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"K dispozícii je slovník"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Nastavenia pre slovníky"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Používateľské slovníky"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Používateľský slovník"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"K dispozícii je slovník"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Aktuálne preberanie"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Nainštalovaný"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Nainštalovaný, zakázaný"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problém s pripojením k službe slovníka"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Slovníky nedostupné"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Obnoviť"</string>
-    <string name="last_update" msgid="3101549719827600346">"Posledná aktualizácia"</string>
-    <string name="message_updating" msgid="820186276704134720">"Prebieha kontrola aktualizácií"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Prebieha načítavanie..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Hlavný slovník"</string>
-    <string name="cancel" msgid="5586531736609183304">"Zrušiť"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Inštalovať"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Zrušiť preberanie"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Zakázať"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Povoliť"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Odstrániť"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"K dispozícii je slovník pre jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Stlačením skontrolujete a prevezmete"</string>
+    <string name="app_name" msgid="6320102637491234792">"Poskytovateľ slovníka"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Poskytovateľ slovníka"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Služba slovníka"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informácie aktualizácie slovníka"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Doplnkové slovníky"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"K dispozícii je slovník"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Nastavenia pre slovníky"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Používateľské slovníky"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Používateľský slovník"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"K dispozícii je slovník"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Aktuálne sa preberá"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Nainštalované"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Nainštalovaný, zakázaný"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Probl. s prip. k sl."</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Slovníky nedostupné"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Obnoviť"</string>
+    <string name="last_update" msgid="730467549913588780">"Posledná aktualizácia"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Prebieha kontrola aktualizácií"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Načítava sa..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Hlavný slovník"</string>
+    <string name="cancel" msgid="6830980399865683324">"Zrušiť"</string>
+    <string name="install_dict" msgid="180852772562189365">"Inštalovať"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Zrušiť"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Odstrániť"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Pre vybratý jazyk mobilného zariadenia je k dispozícii slovník.&lt;br/&gt; Slovník jazyka <xliff:g id="LANGUAGE">%1$s</xliff:g> vám odporúčame &lt;b&gt;prevziať&lt;/b&gt;. Pomôže vám pri zadávaní textu.&lt;br/&gt; &lt;br/&gt; V sieti 3G môže preberanie chvíľu trvať. Ak nemáte &lt;b&gt;neobmedzený dátový program&lt;/b&gt;, môžu sa účtovať poplatky.&lt;br/&gt; Ak s určitosťou neviete aký dátový program používate, vyhľadajte pripojenie k sieti Wi-Fi a preberanie sa spustí automaticky.&lt;br/&gt; &lt;br/&gt; Tip: Slovníky môžete v mobilnom zariadení preberať a odstraňovať v časti &lt;b&gt;Jazyk a vstup&lt;/b&gt; ponuky &lt;b&gt;Nastavenia&lt;/b&gt;."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Prevziať (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Prevziať cez sieť Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"K dispozícii je slovník pre jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Stlačením skontrolujete a prevezmete"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Preberanie: návrhy pre jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g> budú čoskoro k dispozícii."</string>
 </resources>
