--- a/java/res/values-zh-rCN/strings.xml
+++ b/java/res/values-zh-rCN/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"语音输入功能已停用"</string>
     <string name="configure_input_method" msgid="373356270290742459">"配置输入法"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"输入语言"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"发送反馈"</string>
     <string name="select_language" msgid="3693815588777926848">"输入语言"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"再次触摸即可保存"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"有可用词典"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"默认"</string>
     <string name="language_settings" msgid="1671153053201809031">"语言和输入法"</string>
     <string name="select_input_method" msgid="4301602374609275003">"选择输入法"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"词典大全"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"词典大全"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"字典服务"</string>
-    <string name="download_description" msgid="3274861514695032954">"词典更新信息"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"附加词典"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"词典可供下载"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"词典设置"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"用户词典"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"用户词典"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"词典可供下载"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"目前正在下载"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"已安装"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"已安装，已停用"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"连接到词典服务时发生问题"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"没有可用的词典"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"刷新"</string>
-    <string name="last_update" msgid="3101549719827600346">"最后更新时间"</string>
-    <string name="message_updating" msgid="820186276704134720">"正在检查更新"</string>
-    <string name="message_loading" msgid="8611339149825047446">"正在加载..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"主词典"</string>
-    <string name="cancel" msgid="5586531736609183304">"取消"</string>
-    <string name="install_dict" msgid="5525005524697607865">"安装"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"取消下载"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"停用"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"启用"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"删除"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"<xliff:g id="LANGUAGE">%1$s</xliff:g>词典可供下载"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"按此通知即可查看和下载"</string>
+    <string name="app_name" msgid="6320102637491234792">"词典提供程序"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"词典提供程序"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"词典服务"</string>
+    <string name="download_description" msgid="6014835283119198591">"词典更新信息"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"附加词典"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"词典现已可下载"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"词典设置"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"用户词典"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"用户词典"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"词典现已可下载"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"目前正在下载"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"已安装"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"已安装，但目前已停用"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"连接到词典服务时发生问题"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"没有可供下载的词典"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"刷新"</string>
+    <string name="last_update" msgid="730467549913588780">"上次更新时间"</string>
+    <string name="message_updating" msgid="4457761393932375219">"正在检查更新"</string>
+    <string name="message_loading" msgid="8689096636874758814">"正在加载..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"主词典"</string>
+    <string name="cancel" msgid="6830980399865683324">"取消"</string>
+    <string name="install_dict" msgid="180852772562189365">"安装"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"取消"</string>
+    <string name="delete_dict" msgid="756853268088330054">"删除"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"支持您移动设备上所选语言的词典现已可供下载啦！&lt;br/&gt;建议您&lt;b&gt;下载&lt;/b&gt;这部<xliff:g id="LANGUAGE">%1$s</xliff:g>词典，以享受更好的输入体验。&lt;br/&gt;&lt;br/&gt;通过 3G 进行下载可能需要 1 到 2 分钟的时间。如果您使用的不是&lt;b&gt;无流量限制的套餐&lt;/b&gt;，则可能需要支付一定的费用。&lt;br/&gt;如果您不确定自己使用的是哪种流量套餐，建议您使用 Wi-Fi 连接自动开始下载。&lt;br/&gt;&lt;br/&gt;提示：您可以访问移动设备的&lt;b&gt;设置&lt;/b&gt;菜单中的&lt;b&gt;语言和输入法&lt;/b&gt;，来下载和删除词典。"</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"立即下载 (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"通过 Wi-Fi 下载"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"<xliff:g id="LANGUAGE">%1$s</xliff:g>词典现已可下载"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"按此通知即可查看和下载"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"下载中：很快就能启用<xliff:g id="LANGUAGE">%1$s</xliff:g>的词典建议服务了！"</string>
 </resources>
