--- a/java/res/values-zh-rTW/strings.xml
+++ b/java/res/values-zh-rTW/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"語音輸入已停用"</string>
     <string name="configure_input_method" msgid="373356270290742459">"設定輸入法"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"輸入語言"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"提供意見"</string>
     <string name="select_language" msgid="3693815588777926848">"輸入語言"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"再次輕觸即可儲存"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"可使用字典"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"預設"</string>
     <string name="language_settings" msgid="1671153053201809031">"語言與輸入設定"</string>
     <string name="select_input_method" msgid="4301602374609275003">"選擇輸入法"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"字典提供者"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"字典提供者"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"字典服務"</string>
-    <string name="download_description" msgid="3274861514695032954">"字典更新資訊"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"外掛字典"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"字典可供下載"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"字典設定"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"使用者字典"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"使用者字典"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"可用的字典"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"目前正在下載"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"已安裝"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"已安裝但目前停用"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"連線至字典服務時發生問題"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"沒有可用的字典"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"重新整理"</string>
-    <string name="last_update" msgid="3101549719827600346">"上次更新時間"</string>
-    <string name="message_updating" msgid="820186276704134720">"正在檢查更新"</string>
-    <string name="message_loading" msgid="8611339149825047446">"載入中..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"主要字典"</string>
-    <string name="cancel" msgid="5586531736609183304">"取消"</string>
-    <string name="install_dict" msgid="5525005524697607865">"安裝"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"取消下載"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"停用"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"啟用"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"刪除"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"支援「<xliff:g id="LANGUAGE">%1$s</xliff:g>」字典"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"按下即可查看並下載"</string>
+    <string name="app_name" msgid="6320102637491234792">"字典提供者"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"字典提供者"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"字典服務"</string>
+    <string name="download_description" msgid="6014835283119198591">"字典更新資訊"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"外掛字典"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"可用的字典"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"字典設定"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"使用者字典"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"使用者字典"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"可用的字典"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"正在下載"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"已安裝"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"已安裝但目前停用"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"連線至字典服務時發生問題"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"沒有可用的字典"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"重新整理"</string>
+    <string name="last_update" msgid="730467549913588780">"上次更新時間："</string>
+    <string name="message_updating" msgid="4457761393932375219">"正在檢查更新"</string>
+    <string name="message_loading" msgid="8689096636874758814">"載入中..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"主要字典"</string>
+    <string name="cancel" msgid="6830980399865683324">"取消"</string>
+    <string name="install_dict" msgid="180852772562189365">"安裝"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"取消"</string>
+    <string name="delete_dict" msgid="756853268088330054">"刪除"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"您的行動裝置設定的語言，現有字典可供使用。&lt;br/&gt; 建議您&lt;b&gt;下載&lt;/b&gt;<xliff:g id="LANGUAGE">%1$s</xliff:g>字典，加強輸入功能。&lt;br/&gt; &lt;br/&gt; 透過 3G 網路下載約需一兩分鐘。若無&lt;b&gt;無限行動上網資費方案&lt;/b&gt;，可能必須另外付費。&lt;br/&gt;若不確定行動上網資費方案為何，可以等連上 Wi-Fi 網路後再自動下載。&lt;br/&gt; &lt;br/&gt;提示：進入行動裝置的 [設定] 選單，選擇 [語言和輸入] 即可下載及移除字典。&lt;b&gt;&lt;/b&gt;&lt;b&gt;&lt;/b&gt;"</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"立即下載 (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"透過 Wi-Fi 下載"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"支援<xliff:g id="LANGUAGE">%1$s</xliff:g>字典"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"按下即可查看並下載"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"下載中：即將啟用<xliff:g id="LANGUAGE">%1$s</xliff:g>字詞建議服務。"</string>
 </resources>
