--- a/java/res/values-ar/strings.xml
+++ b/java/res/values-ar/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"الإدخال الصوتي مُعطل"</string>
     <string name="configure_input_method" msgid="373356270290742459">"تهيئة طرق الإدخال"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"لغات الإدخال"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"إرسال تعليقات"</string>
     <string name="select_language" msgid="3693815588777926848">"لغات الإدخال"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"المس مرة أخرى للحفظ"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"القاموس متاح"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"الافتراضية"</string>
     <string name="language_settings" msgid="1671153053201809031">"اللغة والإدخال"</string>
     <string name="select_input_method" msgid="4301602374609275003">"اختيار أسلوب الإدخال"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"مقدم القاموس"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"مقدم القاموس"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"خدمة القاموس"</string>
-    <string name="download_description" msgid="3274861514695032954">"معلومات تحديث القاموس"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"القواميس الإضافية"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"قاموس متوفر"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"إعدادات القواميس"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"قواميس المستخدم"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"قاموس المستخدم"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"القاموس متاح"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"يتم حاليًا التنزيل"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"مثبت"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"مثبت، معطل"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"مشكلة في الاتصال بخدمة القاموس"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"لا تتوفر أية قواميس"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"تحديث"</string>
-    <string name="last_update" msgid="3101549719827600346">"تاريخ آخر تحديث"</string>
-    <string name="message_updating" msgid="820186276704134720">"جارٍ البحث عن تحديثات"</string>
-    <string name="message_loading" msgid="8611339149825047446">"تحميل..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"القاموس الرئيسي"</string>
-    <string name="cancel" msgid="5586531736609183304">"إلغاء"</string>
-    <string name="install_dict" msgid="5525005524697607865">"تثبيت"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"إلغاء التنزيل"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"تعطيل"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"تمكين"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"حذف"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"هناك قاموس متوفر للغة <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"اضغط للمراجعة والتنزيل"</string>
+    <string name="app_name" msgid="6320102637491234792">"مقدم القاموس"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"مقدم القاموس"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"خدمة القاموس"</string>
+    <string name="download_description" msgid="6014835283119198591">"معلومات تحديث القاموس"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"القواميس الإضافية"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"القاموس متاح"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"إعدادات القواميس"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"قواميس المستخدم"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"قاموس المستخدم"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"القاموس متاح"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"يتم حاليًا التنزيل"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"تم التثبيت"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"مثبت، معطل"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"مشكلة في الاتصال بخدمة القاموس"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"لا تتوفر أية قواميس"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"تحديث"</string>
+    <string name="last_update" msgid="730467549913588780">"تاريخ آخر تحديث"</string>
+    <string name="message_updating" msgid="4457761393932375219">"جارٍ البحث عن تحديثات"</string>
+    <string name="message_loading" msgid="8689096636874758814">"جارٍ التحميل..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"القاموس الرئيسي"</string>
+    <string name="cancel" msgid="6830980399865683324">"إلغاء"</string>
+    <string name="install_dict" msgid="180852772562189365">"تثبيت"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"إلغاء"</string>
+    <string name="delete_dict" msgid="756853268088330054">"حذف"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"اللغة المحددة على جهازك الجوال تشتمل على قاموس متوفر.&lt;br/&gt; نوصي &lt;b&gt;بتنزيل&lt;/b&gt; قاموس <xliff:g id="LANGUAGE">%1$s</xliff:g> لتحسين تجربة الكتابة.&lt;br/&gt; &lt;br/&gt; قد يستغرق التنزيل دقيقة أو دقيقتين أكثر من المدة التي يستغرقها التنزيل عبر شبكة الجيل الثالث. قد تنطبق الرسوم إذا لم تكن مشتركًا في &lt;b&gt;خطة البيانات غير المحدودة&lt;/b&gt;.&lt;br/&gt; إذا لم تكن متأكدًا من خطة البيانات المتوفرة لديك، فنحن نوصي بالبحث عن اتصال Wi-Fi لبدء عملية التنزيل تلقائيًا.&lt;br/&gt; &lt;br/&gt; نصيحة: يمكنك تنزيل القواميس وإزالتها عن طريق الانتقال إلى &lt;b&gt;اللغة والإدخال&lt;/b&gt; في قائمة &lt;b&gt;إعدادات&lt;/b&gt; في جهازك الجوَّال."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"التنزيل الآن (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> ميغابايت)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"التنزيل عبر شبكة Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"هناك قاموس متوفر للغة <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"اضغط للمراجعة والتنزيل"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"جارٍ التنزيل: ستتوفر اقتراحات للغة <xliff:g id="LANGUAGE">%1$s</xliff:g> بعد قليل."</string>
 </resources>
