--- a/java/res/values-bg/strings.xml
+++ b/java/res/values-bg/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Глас. въвежд. е деакт."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Конфигуриране на въвеждането"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Входни езици"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Изпращане на отзиви"</string>
     <string name="select_language" msgid="3693815588777926848">"Езици за въвеждане"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Докоснете отново, за да запазите"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Има достъп до речник"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Стандартни"</string>
     <string name="language_settings" msgid="1671153053201809031">"Език и въвеждане"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Избор на метод на въвеждане"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Доставчик на речника"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Доставчик на речника"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Услуга за речник"</string>
-    <string name="download_description" msgid="3274861514695032954">"Информация за актуализацията на речниците"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Добавени речници"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Налице е речник"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Настройки за речници"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Потребителски речници"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Потребителски речник"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Речникът е налице"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Изтеглят се понастоящем"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Инсталирано"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Инсталирано, деактивирано"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Има проблем с връзката"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Няма налични речници"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Опресняване"</string>
-    <string name="last_update" msgid="3101549719827600346">"Последна актуализация:"</string>
-    <string name="message_updating" msgid="820186276704134720">"Проверява се за актуализации"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Зарежда се..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Основен речник"</string>
-    <string name="cancel" msgid="5586531736609183304">"Отказ"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Инсталиране"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Анулиране на изтеглянето"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Деактивиране"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Активиране"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Изтриване"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"За <xliff:g id="LANGUAGE">%1$s</xliff:g> е налице речник"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Натиснете, за да прегледате и изтеглите"</string>
+    <string name="app_name" msgid="6320102637491234792">"Доставчик на речника"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Доставчик на речника"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Услуга за речник"</string>
+    <string name="download_description" msgid="6014835283119198591">"Информация за актуализацията на речниците"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Добавени речници"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Речникът е налице"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Настройки за речници"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Потребителски речници"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Потребителски речник"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Речникът е налице"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Понастоящем се изтегля"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Инсталиран"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Инсталиран, деактивиран"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Няма връзка с речниците"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Няма налични речници"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Опресняване"</string>
+    <string name="last_update" msgid="730467549913588780">"Последна актуализация:"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Проверява се за актуализации"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Зарежда се..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Основен речник"</string>
+    <string name="cancel" msgid="6830980399865683324">"Отказ"</string>
+    <string name="install_dict" msgid="180852772562189365">"Инсталиране"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Отказ"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Изтриване"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Налице е речник за избрания език на мобилното ви устройство.&lt;br/&gt; Препоръчваме ви &lt;b&gt;dда изтеглите&lt;/b&gt; речника за <xliff:g id="LANGUAGE">%1$s</xliff:g>, за да подобрите практическата си работа при писане.&lt;br/&gt; &lt;br/&gt; Изтеглянето през 3G може да отнеме една до две минути. Възможно е да бъдете таксувани, ако нямате &lt;b&gt;неограничен план за данни&lt;/b&gt;.&lt;br/&gt; В случай че не сте сигурни какъв е вашият план, ви препоръчваме да намерите Wi-Fi връзка, за да започнете автоматично изтеглянето.&lt;br/&gt; &lt;br/&gt; Съвет: Можете да изтегляте и премахвате речници, като отворите &lt;b&gt;Език и въвеждане&lt;/b&gt; в менюто &lt;b&gt;Настройки&lt;/b&gt; на мобилното си устройство."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Изтегляне сега (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> МБ)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Изтегляне през Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"За <xliff:g id="LANGUAGE">%1$s</xliff:g> е налице речник"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Натиснете, за да прегледате и изтеглите"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Изтегля се: Предложенията за <xliff:g id="LANGUAGE">%1$s</xliff:g> ще бъдат готови скоро."</string>
 </resources>
