--- a/java/res/values-cs/strings.xml
+++ b/java/res/values-cs/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Hlasový vstup vypnut"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfigurace metod zadávání"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Vstupní jazyky"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Odeslat zpětnou vazbu"</string>
     <string name="select_language" msgid="3693815588777926848">"Vstupní jazyky"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Opětovným dotykem provedete uložení"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Slovník k dispozici"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Výchozí"</string>
     <string name="language_settings" msgid="1671153053201809031">"Jazyk a zadávání"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Výběr metody zadávání dat"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Poskytovatel slovníku"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Poskytovatel slovníku"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Služba slovníku"</string>
-    <string name="download_description" msgid="3274861514695032954">"Informace o aktualizaci slovníku"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Doplňkové slovníky"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Je k dispozici slovník"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Nastavení pro slovníky"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Uživatelské slovníky"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Uživatelský slovník"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"K dispozici je slovník"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Aktuální stahování"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Nainstalováno"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Nainstalováno, zakázáno"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Probl. s přip. k sl."</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Žádné slovníky"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Aktualizovat"</string>
-    <string name="last_update" msgid="3101549719827600346">"Poslední aktualizace"</string>
-    <string name="message_updating" msgid="820186276704134720">"Kontrola aktualizací"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Načítání..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Hlavní slovník"</string>
-    <string name="cancel" msgid="5586531736609183304">"Zrušit"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Nainstalovat"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Zrušit stahování"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Zakázat"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Povolit"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Smazat"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Je k dispozici slovník pro jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Stisknutím zkontrolujete a stáhnete"</string>
+    <string name="app_name" msgid="6320102637491234792">"Poskytovatel slovníku"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Poskytovatel slovníku"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Služba slovníku"</string>
+    <string name="download_description" msgid="6014835283119198591">"Informace o aktualizaci slovníku"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Doplňkové slovníky"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Slovník k dispozici"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Nastavení slovníků"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Uživatelské slovníky"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Uživatelský slovník"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Slovník k dispozici"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Aktuální stahování"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Nainstalováno"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Nainstalováno, zakázáno"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Chyba přip. k slovníku"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Žádné slovníky"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Aktualizovat"</string>
+    <string name="last_update" msgid="730467549913588780">"Poslední aktualizace"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Kontrola aktualizací"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Načítání..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Hlavní slovník"</string>
+    <string name="cancel" msgid="6830980399865683324">"Zrušit"</string>
+    <string name="install_dict" msgid="180852772562189365">"Instalovat"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Zrušit"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Smazat"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Pro vybraný jazyk mobilního zařízení je k dispozici slovník.&lt;br/&gt; Doporučujeme slovník pro jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g> &lt;b&gt;stáhnout&lt;/b&gt;. Usnadníte si tím zadávání textu.&lt;br/&gt; &lt;br/&gt; V síti 3G bude stahování chvíli trvat. Pokud nemáte &lt;b&gt;neomezený datový tarif&lt;/b&gt;, mohou vám být účtovány poplatky.&lt;br/&gt; Jestliže si nejste jisti, jaký datový tarif máte, doporučujeme vám najít připojení Wi-Fi. Stahování se pak zahájí automaticky.&lt;br/&gt; &lt;br/&gt; Tip: Slovníky můžete stahovat a odstraňovat v nabídce mobilního zařízení &lt;b&gt;Jazyk a vstup&lt;/b&gt; v &lt;b&gt;Nastavení&lt;/b&gt;."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Stáhnout ihned (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Stáhnout pouze přes Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Je k dispozici slovník pro jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Stisknutím zkontrolujete a stáhnete"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Stahování: návrhy pro jazyk <xliff:g id="LANGUAGE">%1$s</xliff:g> budou brzy k dispozici."</string>
 </resources>
