--- a/java/res/values-hr/strings.xml
+++ b/java/res/values-hr/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Glas. unos onemog."</string>
     <string name="configure_input_method" msgid="373356270290742459">"Konfiguriraj načine ulaza"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Jezici unosa"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Slanje povratnih informacija"</string>
     <string name="select_language" msgid="3693815588777926848">"Jezici unosa"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Dodirnite ponovo za spremanje"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Rječnik je dostupan"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Zadano"</string>
     <string name="language_settings" msgid="1671153053201809031">"Jezik i unos"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Odabir načina unosa"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Davatelj rječnika"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Davatelj rječnika"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Usluga rječnika"</string>
-    <string name="download_description" msgid="3274861514695032954">"Ažurirane informacije rječnika"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Rječnici - dodaci"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Dostupan je rječnik"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Postavke za rječnike"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Korisnički rječnici"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Korisnički rječnik"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Rječnik je dostupan"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Trenutačno u preuzimanju"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Instalirano"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Instalirano, onemogućeno"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Nema usluge rječnika"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Rječnici nedostupni"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Osvježi"</string>
-    <string name="last_update" msgid="3101549719827600346">"Zadnje ažuriranje"</string>
-    <string name="message_updating" msgid="820186276704134720">"Provjera ažuriranja"</string>
-    <string name="message_loading" msgid="8611339149825047446">"Učitavanje..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Glavni rječnik"</string>
-    <string name="cancel" msgid="5586531736609183304">"Odustani"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Instaliraj"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Otkaži preuzimanje"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Onemogući"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Omogući"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Izbriši"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Dostupan je rječnik za <xliff:g id="LANGUAGE">%1$s</xliff:g> jezik"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Pritisnite za pregled i preuzimanje"</string>
+    <string name="app_name" msgid="6320102637491234792">"Davatelj rječnika"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Davatelj rječnika"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Usluga rječnika"</string>
+    <string name="download_description" msgid="6014835283119198591">"Ažurirane informacije rječnika"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Rječnici dodaci"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Dostupan je rječnik"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Postavke za rječnike"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Korisnički rječnici"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Korisnički rječnik"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Dostupan je rječnik"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Trenutačno se preuzima"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Instalirano"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Instalirano, onemogućeno"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Nema usluge rječnika"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Rječnici nedostupni"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Osvježavanje"</string>
+    <string name="last_update" msgid="730467549913588780">"Zadnje ažuriranje"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Provjera ažuriranja"</string>
+    <string name="message_loading" msgid="8689096636874758814">"Učitavanje..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Glavni rječnik"</string>
+    <string name="cancel" msgid="6830980399865683324">"Odustani"</string>
+    <string name="install_dict" msgid="180852772562189365">"Instaliraj"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Odustani"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Izbriši"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Dostupan je rječnik za odabrani jezik na vašem uređaju.&lt;br/&gt; Preporučujemo &lt;b&gt;preuzimanje&lt;/b&gt; rječnika za <xliff:g id="LANGUAGE">%1$s</xliff:g> radi boljeg doživljaja unosa teksta.&lt;br/&gt; &lt;br/&gt; Na 3G mreži preuzimanje može potrajati minutu ili dvije. Može podlijegati naplati ako nemate &lt;b&gt;neograničenu podatkovnu tarifu&lt;/b&gt;.&lt;br/&gt; Ako niste sigurni koju tarifu imate, preporučujemo da pronađete Wi-Fi mrežu i pokrenete automatsko preuzimanje.&lt;br/&gt; &lt;br/&gt; Savjet: rječnike možete preuzeti i ukloniti u odjeljku &lt;b&gt;Jezik i unos&lt;/b&gt; na izborniku &lt;b&gt;Postavke&lt;/b&gt; na mobilnom uređaju."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Preuzmi sada (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Preuzmi putem Wi-Fi mreže"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Dostupan je rječnik za <xliff:g id="LANGUAGE">%1$s</xliff:g> jezik"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Pritisnite za pregled i preuzimanje"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Preuzimanje: prijedlozi za <xliff:g id="LANGUAGE">%1$s</xliff:g> bit će spremni uskoro."</string>
 </resources>
