--- a/java/res/values-ja/strings.xml
+++ b/java/res/values-ja/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"音声入力は無効です"</string>
     <string name="configure_input_method" msgid="373356270290742459">"入力方法を設定"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"入力言語"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"フィードバックを送信"</string>
     <string name="select_language" msgid="3693815588777926848">"入力言語"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"保存するにはもう一度タップ"</string>
     <string name="has_dictionary" msgid="6071847973466625007">"辞書を利用できます"</string>
@@ -170,39 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"デフォルト"</string>
     <string name="language_settings" msgid="1671153053201809031">"言語と入力"</string>
     <string name="select_input_method" msgid="4301602374609275003">"入力方法の選択"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"辞書提供元"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"辞書提供元"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"辞書"</string>
-    <string name="download_description" msgid="3274861514695032954">"辞書のアップデート情報"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"アドオン辞書"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"辞書を利用できます"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"辞書の設定"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"単語リスト"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"単語リスト"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"辞書を利用できます"</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"ダウンロードしています"</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"インストール済み"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"インストール済み、無効"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"辞書に接続できません"</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"辞書はありません"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"更新"</string>
-    <string name="last_update" msgid="3101549719827600346">"最終更新日"</string>
-    <string name="message_updating" msgid="820186276704134720">"アップデートを確認しています"</string>
-    <string name="message_loading" msgid="8611339149825047446">"読み込み中..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"メイン辞書"</string>
-    <string name="cancel" msgid="5586531736609183304">"キャンセル"</string>
-    <string name="install_dict" msgid="5525005524697607865">"インストール"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"ダウンロードをキャンセル"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"無効にする"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"有効にする"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"削除"</string>
-    <!-- no translation found for should_download_over_metered_prompt (4965264849057656521) -->
-    <skip />
-    <!-- no translation found for download_over_metered (4024013764937850061) -->
-    <skip />
-    <!-- no translation found for do_not_download_over_metered (6963770885033765378) -->
-    <skip />
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"<xliff:g id="LANGUAGE">%1$s</xliff:g>の辞書を利用できます"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"押すと確認/ダウンロードできます"</string>
+    <string name="app_name" msgid="6320102637491234792">"辞書提供元"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"辞書提供元"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"辞書"</string>
+    <string name="download_description" msgid="6014835283119198591">"辞書のアップデート情報"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"アドオン辞書"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"辞書を利用できます"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"辞書の設定"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"単語リスト"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"単語リスト"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"辞書を利用できます"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"ダウンロード中"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"インストール済み"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"インストール済み、無効"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"辞書に接続できません"</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"辞書はありません"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"更新"</string>
+    <string name="last_update" msgid="730467549913588780">"最終更新"</string>
+    <string name="message_updating" msgid="4457761393932375219">"アップデートを確認しています"</string>
+    <string name="message_loading" msgid="8689096636874758814">"読み込んでいます..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"メイン辞書"</string>
+    <string name="cancel" msgid="6830980399865683324">"キャンセル"</string>
+    <string name="install_dict" msgid="180852772562189365">"インストール"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"キャンセル"</string>
+    <string name="delete_dict" msgid="756853268088330054">"削除"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"お使いの携帯端末で選択した言語に対応する辞書があります。&lt;br/&gt;入力機能をより快適にご利用いただくため、<xliff:g id="LANGUAGE">%1$s</xliff:g>の辞書の&lt;b&gt;ダウンロード&lt;/b&gt;をおすすめします。&lt;br/&gt; &lt;br/&gt;3G経由の場合、ダウンロードに要する時間は1～2分です。&lt;b&gt;定額制のデータプラン&lt;/b&gt;をご利用でない場合は通信料が発生する可能性があります。&lt;br/&gt;ご利用のデータプランが不明な場合は、自動的にダウンロードが開始されるWi-Fi接続を探すことをおすすめします。&lt;br/&gt; &lt;br/&gt;ヒント: 辞書のダウンロードや削除は、お使いの携帯端末の[&lt;b&gt;設定&lt;/b&gt;]メニューの[&lt;b&gt;言語と入力&lt;/b&gt;]で行えます。"</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"今すぐダウンロード（<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g>MB）"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Wi-Fi経由でダウンロード"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"<xliff:g id="LANGUAGE">%1$s</xliff:g>の辞書を利用できます"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"押すと確認/ダウンロードできます"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"ダウンロード中: <xliff:g id="LANGUAGE">%1$s</xliff:g>の入力候補をまもなく利用できます。"</string>
 </resources>
