--- a/java/res/values-lv/strings.xml
+++ b/java/res/values-lv/strings.xml
@@ -128,6 +128,7 @@
     <string name="voice_input_modes_summary_off" msgid="63875609591897607">"Balss iev. atspējota"</string>
     <string name="configure_input_method" msgid="373356270290742459">"Ievades metožu konfigurēšana"</string>
     <string name="language_selection_title" msgid="1651299598555326750">"Ievades valodas"</string>
+    <string name="send_feedback" msgid="1780431884109392046">"Sūtīt atsauksmes"</string>
     <string name="select_language" msgid="3693815588777926848">"Ievades valodas"</string>
     <string name="hint_add_to_dictionary" msgid="573678656946085380">"Pieskarieties vēlreiz, lai saglabātu."</string>
     <string name="has_dictionary" msgid="6071847973466625007">"Ir pieejama vārdnīca."</string>
@@ -170,36 +171,34 @@
     <string name="button_default" msgid="3988017840431881491">"Noklusējums"</string>
     <string name="language_settings" msgid="1671153053201809031">"Valoda un ievade"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Ievades metodes izvēle"</string>
-
-    <string name="app_name" msgid="1017058186322714405">"Vārdnīcas nodrošinātājs"</string>
-    <string name="dictionary_provider_name" msgid="7710415599371161092">"Vārdnīcas nodrošinātājs"</string>
-    <string name="dictionary_service_name" msgid="551650697348202056">"Vārdnīcas pakalpojums"</string>
-    <string name="download_description" msgid="3274861514695032954">"Vārdnīcas atjauninājuma informācija"</string>
-    <string name="dictionary_settings_title" msgid="7243930967845020407">"Pievienojumvārdnīcas"</string>
-    <string name="dictionary_install_over_metered_network_prompt" msgid="3642634623465349716">"Vārdnīca ir pieejama"</string>
-    <string name="dictionary_settings_summary" msgid="8599679434799749053">"Vārdnīcu iestatījumi"</string>
-    <string name="user_dictionaries" msgid="7519736232423929124">"Lietotāja vārdnīcas"</string>
-    <string name="default_user_dict_pref_name" msgid="522125152757607790">"Lietotāja vārdnīca"</string>
-    <string name="dictionary_available" msgid="3192920608520618083">"Vārdnīca ir pieejama."</string>
-    <string name="dictionary_downloading" msgid="859497476266309596">"Notiek lejupielāde."</string>
-    <string name="dictionary_installed" msgid="6425586899671378160">"Instalēta"</string>
-    <string name="dictionary_disabled" msgid="3448571280490746032">"Instalēta, atspējota"</string>
-    <string name="cannot_connect_to_dict_service" msgid="6875665494726300427">"Problēma, savien. ar vārdn. pak."</string>
-    <string name="no_dictionaries_available" msgid="5206225077945637810">"Vārdn. nav pieejamas"</string>
-    <string name="check_for_updates_now" msgid="642057986127624986">"Atsvaidzināt"</string>
-    <string name="last_update" msgid="3101549719827600346">"Pēdējo reizi atjaunināts"</string>
-    <string name="message_updating" msgid="820186276704134720">"Notiek pārbaude, vai ir pieejami atjauninājumi."</string>
-    <string name="message_loading" msgid="8611339149825047446">"Notiek ielāde..."</string>
-    <string name="main_dict_description" msgid="1679964306980098570">"Galvenā vārdnīca"</string>
-    <string name="cancel" msgid="5586531736609183304">"Atcelt"</string>
-    <string name="install_dict" msgid="5525005524697607865">"Instalēt"</string>
-    <string name="cancel_download_dict" msgid="7163173650298838367">"Atcelt lejupielādi"</string>
-    <string name="disable_dict" msgid="7685810040236497700">"Atspējot"</string>
-    <string name="enable_dict" msgid="3848179784702473680">"Iespējot"</string>
-    <string name="delete_dict" msgid="5817159290503843766">"Dzēst"</string>
-    <string name="should_download_over_metered_prompt" msgid="4965264849057656521">"Mobilajā ierīcē atlasītajai valodai ir pieejama vārdnīca.&lt;br/&gt; Ieteicams &lt;b&gt;lejupielādēt&lt;/b&gt; <xliff:g id="LANGUAGE">%1$s</xliff:g> vārdnīcu, lai uzlabotu rakstīšanas iespējas.&lt;br/&gt; &lt;br/&gt; Lejupielāde, izmantojot 3G, aizņems dažas minūtes. Ja nelietojat &lt;b&gt;neierobežotu datu plānu&lt;/b&gt;, var tikt piemērota maksa.&lt;br/&gt; Ja nezināt, kādu datu plānu lietojat, atrodiet Wi-Fi savienojumu, lai automātiski sāktu lejupielādi.&lt;br/&gt; &lt;br/&gt; Padoms: vārdnīcas var lejupielādēt un noņemt mobilās ierīces izvēlnes &lt;b&gt;Iestatījumi&lt;/b&gt; sadaļā &lt;b&gt;Valodas ievade&lt;/b&gt;."</string>
-    <string name="download_over_metered" msgid="4024013764937850061">"Lejupielādēt tūlīt (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
-    <string name="do_not_download_over_metered" msgid="6963770885033765378">"Lejupielādēt, izmantojot Wi-Fi"</string>
-    <string name="dict_available_notification_title" msgid="4560576379680660047">"Ir pieejama vārdnīca šādai valodai: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="dict_available_notification_description" msgid="355515381285317832">"Nospiediet, lai pārskatītu un lejupielādētu"</string>
+    <string name="app_name" msgid="6320102637491234792">"Vārdnīcas nodrošinātājs"</string>
+    <string name="dictionary_provider_name" msgid="3027315045397363079">"Vārdnīcas nodrošinātājs"</string>
+    <string name="dictionary_service_name" msgid="6237472350693511448">"Vārdnīcas pakalpojums"</string>
+    <string name="download_description" msgid="6014835283119198591">"Vārdnīcas atjauninājuma informācija"</string>
+    <string name="dictionary_settings_title" msgid="8091417676045693313">"Pievienojumvārdnīcas"</string>
+    <string name="dictionary_install_over_metered_network_prompt" msgid="3587517870006332980">"Vārdnīca ir pieejama"</string>
+    <string name="dictionary_settings_summary" msgid="5305694987799824349">"Vārdnīcu iestatījumi"</string>
+    <string name="user_dictionaries" msgid="3582332055892252845">"Lietotāja vārdnīcas"</string>
+    <string name="default_user_dict_pref_name" msgid="1625055720489280530">"Lietotāja vārdnīca"</string>
+    <string name="dictionary_available" msgid="4728975345815214218">"Vārdnīca ir pieejama"</string>
+    <string name="dictionary_downloading" msgid="2982650524622620983">"Pašreiz tiek lejupielādēta"</string>
+    <string name="dictionary_installed" msgid="8081558343559342962">"Instalēta"</string>
+    <string name="dictionary_disabled" msgid="8950383219564621762">"Instalēta, atspējota"</string>
+    <string name="cannot_connect_to_dict_service" msgid="9216933695765732398">"Nevar savien. ar vārdnīcas pakalp."</string>
+    <string name="no_dictionaries_available" msgid="8039920716566132611">"Vārdn. nav pieejamas"</string>
+    <string name="check_for_updates_now" msgid="8087688440916388581">"Atsvaidzināt"</string>
+    <string name="last_update" msgid="730467549913588780">"Pēdējo reizi atjaunināts"</string>
+    <string name="message_updating" msgid="4457761393932375219">"Notiek pārbaude, vai ir pieejami atjauninājumi."</string>
+    <string name="message_loading" msgid="8689096636874758814">"Notiek ielāde..."</string>
+    <string name="main_dict_description" msgid="3072821352793492143">"Galvenā vārdnīca"</string>
+    <string name="cancel" msgid="6830980399865683324">"Atcelt"</string>
+    <string name="install_dict" msgid="180852772562189365">"Instalēt"</string>
+    <string name="cancel_download_dict" msgid="7843340278507019303">"Atcelt"</string>
+    <string name="delete_dict" msgid="756853268088330054">"Dzēst"</string>
+    <string name="should_download_over_metered_prompt" msgid="2878629598667658845">"Mobilajā ierīcē atlasītajai valodai ir pieejama vārdnīca.&lt;br/&gt;Ieteicams &lt;b&gt;lejupielādēt&lt;/b&gt; vārdnīcu (<xliff:g id="LANGUAGE">%1$s</xliff:g>), lai uzlabotu rakstīšanas iespējas.&lt;br/&gt;&lt;br/&gt;Lejupielāde, izmantojot 3G tīklu, ilgs dažas minūtes. Ja nelietojat &lt;b&gt;neierobežotu datu plānu&lt;/b&gt;, var tikt piemērota maksa.&lt;br/&gt;Ja nezināt, kādu datu plānu lietojat, ieteicams atrast Wi-Fi savienojumu, lai automātiski sāktu lejupielādi.&lt;br/&gt;&lt;br/&gt;Padoms. Vārdnīcas var lejupielādēt un noņemt mobilās ierīces izvēlnes &lt;b&gt;Iestatījumi&lt;/b&gt; sadaļā &lt;b&gt;Valoda un ievade&lt;/b&gt;."</string>
+    <string name="download_over_metered" msgid="1643065851159409546">"Lejupielādēt tūlīt (<xliff:g id="SIZE_IN_MEGABYTES">%1$.1f</xliff:g> MB)"</string>
+    <string name="do_not_download_over_metered" msgid="2176209579313941583">"Lejupielādēt, izmantojot Wi-Fi"</string>
+    <string name="dict_available_notification_title" msgid="6514288591959117288">"Ir pieejama vārdnīca šādai valodai: <xliff:g id="LANGUAGE">%1$s</xliff:g>"</string>
+    <string name="dict_available_notification_description" msgid="1075194169443163487">"Nospiediet, lai pārskatītu un lejupielādētu"</string>
+    <string name="toast_downloading_suggestions" msgid="1313027353588566660">"Notiek lejupielāde. Drīz būs pieejami ieteikumi šādai valodai: <xliff:g id="LANGUAGE">%1$s</xliff:g>."</string>
 </resources>
